# CRAI

./: .gitignore  README.md  final.py  index.py  iris.ipynb  letter.ipynb  merge-target1.ipynb  merge-target2.ipynb  merge-target3.ipynb  performance.md  script.py  t.py  test.py
csv/: final_letter.csv  final_raisin.csv  meta_data.csv  raisin.csv  small_beans.csv  small_iris.csv
example_T12/: pyproject.toml  requirements.txt
example_T12/example_T12.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
final_csv/: iris_raisin.csv  reduced_iris_copy.csv  reduced_raisin.csv  reduced_raisin_copy.csv
iris2raisin/: merge-target1.ipynb  merge-target2.ipynb  merge-target3.ipynb
noise/: notebook.ipynb
notebooks/: iris.ipynb  letter.ipynb  raisin.ipynb
package/: LICENSE
raisin2iris/: merge-target1.ipynb  merge-target2.ipynb  merge-target3.ipynb
test_algorithms_morphing/: README.md  setup.py
test_datasets/: dataset1.csv  dataset10.csv  dataset100.csv  dataset101.csv  dataset102.csv  dataset103.csv  dataset104.csv  dataset105.csv  dataset11.csv  dataset12.csv  dataset13.csv  dataset14.csv  dataset15.csv  dataset16.csv  dataset17.csv  dataset18.csv  dataset19.csv  dataset2.csv  dataset20.csv  dataset21.csv  dataset22.csv  dataset23.csv  dataset24.csv  dataset25.csv  dataset26.csv  dataset27.csv  dataset28.csv  dataset29.csv  dataset3.csv  dataset30.csv  dataset31.csv  dataset32.csv  dataset33.csv  dataset34.csv  dataset35.csv  dataset36.csv  dataset37.csv  dataset38.csv  dataset39.csv  dataset4.csv  (+65 more)
utils/: helper.py
with-no-skf/: merge-target1.ipynb  (+2 more)
(+13 files in other folders)
